woops.  screwed up Makefile

--- a/static/less/Makefile
+++ b/static/less/Makefile
@@ -1,11 +1,12 @@
 BOOTSTRAP = ../css/bootstrap.css
-BOOTSTRAP_LESS = ./boostrap.less
+BOOTSTRAP_LESS = ./bootstrap/bootstrap.less
 
 
 build:
+	@echo "Building Bootstrap..."
 	@recess --compile ${BOOTSTRAP_LESS} > ${BOOTSTRAP}
 
 
 watch:
-	echo "Watching less files... "; \
-	watchr -e "watch('.*\.less') { system 'make' }"
+	@echo "Watching less files..."
+	@watchr -e "watch('.*\.less') { system 'make' }"
